# tchapia.com

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  tchapia_database_diagram.xml
.claude/: settings.local.json
tchapia/: db.sqlite3  manage.py
tchapia/base/: admin.py  context_processors.py  models.py  urls.py  views.py
tchapia/base/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_initial.py  0005_message.py
tchapia/base/templatetags/: custom_filters.py
tchapia/customer/: admin.py  forms.py  models.py  urls.py  views.py
tchapia/customer/migrations/: 0001_initial.py  0002_initial.py  0003_alter_project_budget_max_alter_project_budget_min.py  0004_project_service_delete_projectservice.py  0005_alter_project_city_alter_project_priority_and_more.py  0006_customernotification.py  0007_projectimage.py
tchapia/handyman/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
tchapia/handyman/migrations/: 0001_initial.py  0002_initial.py  0003_alter_handyman_hourly_rate_alter_handyman_skills.py  0004_handymannotification.py  0005_alter_handymannotification_notification_type_and_more.py  0006_handymanportfolioimage.py
tchapia/static/css/: buttons.css  components.css  design-system.css  tchapia-bootstrap.css
tchapia/tchapia/: asgi.py  settings.py  urls.py  wsgi.py
tchapia/templates/base/: conversation.html  handyman_profile.html  handymen_list.html  home.html  inbox.html  services_list.html
tchapia/templates/customer/: dashboard.html  (+4 more)
tchapia/userauths/: admin.py  forms.py  models.py  urls.py  views.py
(+11 files in other folders)
