[project]
name = "tchapia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.6",
    "Pillow>=10.0.0",
    "django-crispy-forms>=2.0",
    "crispy-bootstrap5>=0.7",
    "django-jazzmin>=3.0.1",
    "django-bootstrap5>=24.2",
]
